<resources>
  <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
     <string name="validation_regex">Maybank - AMOS </string>
    <string name="app_name">Maybank - AMOS </string>
    <string name="app_title">AMOS</string>
    <string name="str_logo">Logo</string>
    <string name="str_loading">Loading...</string>
    <string name="str_supervisory_system">Survey\\nOutlet</string>
    <string name="str_calender">Kalender</string>
    <string name="str_user">Pengguna</string>
    <string name="str_last_update">Update Terakhir</string>
    <string name="str_type">Tipe</string>
    <string name="str_sub_type">Sub Tipe</string>
    <string name="str_district">District</string>
    <string name="str_route">Route</string>
    <string name="str_sync">Sync</string>
    <string name="str_remark">Remark</string>
    <string name="str_general_execution_detail">Pelaksanaan Kunjungan Umum</string>
    <string name="str_date">Tanggal</string>
    <string name="str_execute">Pelaksanaan</string>
    <string name="str_back">Kembali</string>
    <string name="str_change_plan">Ubah Rencana</string>
    <string name="str_join_visit_execution_detail">Pelaksanaan Join Visit</string>
    <string name="str_user_information">Informasi User</string>
    <string name="str_teritory">Teritori</string>
    <string name="str_title">Judul</string>
    <string name="str_planning_list_title">Daftar Pelaksanaan</string>
    <string name="str_join_visit">Join Visit</string>
    <string name="str_time_of_visit">Waktu Kunjungan</string>
    <string name="str_type_of_visit">Tipe Kunjungan</string>
    <string name="status_download">Harap menunggu sebentar, proses download master data sedang berjalan.</string>
    <string name="str_area">Area</string>
    <string name="str_next">Selanjutnya</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_search">Search</string>
    <string name="str_yes">Ya</string>
    <string name="str_no">Tidak</string>
    <string name="str_administration">Administrasi</string>
    <string name="str_equipment">Kelengkapan</string>
    <string name="str_tidiness">Kerapihan</string>
    <string name="str_on_time">Tepat Waktu</string>
    <string name="str_general">Umum</string>
    <string name="str_salesman">Salesman</string>
    <string name="str_outlet">Outlet</string>
    <string name="str_list">Daftar</string>
    <string name="str_outlet_list">Daftar Outlet</string>
    <string name="str_outlet_detail">Detail Outlet</string>
    <string name="str_brand_performance">Kinerja Merk</string>
    <string name="str_pictures">Gambar</string>
    <string name="str_internal_volume">Volume Internal</string>
    <string name="str_competitor_volume">Volume Pesaing</string>
    <string name="str_outlet_observation">Pengamatan Outlet</string>
    <string name="str_relationship">Hubungan</string>
    <string name="str_stock_check">Pengecekan Stok</string>
    <string name="str_product_presentation">Presentasi Produk</string>
    <string name="str_program_presentation">Presentasi Program</string>
    <string name="str_display">Display</string>
    <string name="str_closing">Closing</string>
    <string name="str_old_posm">POSM Lama</string>
    <string name="str_new_posm">POSM Baru</string>
    <string name="str_price_recomendation">Rekomendasi Harga</string>
    <string name="str_customer_contact">Kontak Dengan Pelanggan</string>
    <string name="str_brand_list">Daftar Produk</string>
    <string name="str_brand">Merk</string>
    <string name="str_distribution">Distribusi</string>
    <string name="str_product_visibility">Visibilitas Produk</string>
    <string name="str_unit_visibility">Visibilitas Unit</string>
    <string name="str_mp">MP</string>
    <string name="str_program">Program</string>
    <string name="str_general_visit">Kunjungan Umum</string>
    <string name="str_number_of_a_outlet"># A. Outlet</string>
    <string name="str_number_of_p_outlet"># P. Outlet</string>
    <string name="str_dash">-</string>
    <string name="str_picture_list">Daftar Gambar</string>
    <string name="str_description">Deskripsi</string>
    <string name="str_execution_detail">Detail Pelaksanaan</string>
    <string name="str_outlet_id">Id Outlet</string>
    <string name="str_outlet_barcodeid">Id Barcode Outlet</string>
    <string name="str_outlet_name">Nama Outlet</string>
    <string name="str_outlet_id1">OUTLET ID</string>
    <string name="str_outlet_name1">NAMA OUTLET</string>
    <string name="str_outlet_address">Alamat</string>
    <string name="str_outlet_investment">INVESTMENT</string>
    <string name="str_outlet_owner">NAMA PEMILIK</string>
    <string name="str_outlet_location">Lokasi (Lat/Long)</string>
    <string name="str_outlet_todora">DO/RO</string>
    <string name="str_outlet_kawasan">KAWASAN</string>
    <string name="str_outlet_posisi">POSISI</string>
    <string name="str_competitor_program">Program Kompetitor</string>
    <string name="str_preparation">Persiapan</string>
    <string name="str_step_of_call">Step Of Call</string>
    <string name="str_product_information">Informasi Produk</string>
    <string name="str_batal">Batal</string>
    <string name="str_save">Simpan</string>
    <string name="str_add_product_information">Tambah Informasi Produk</string>
    <string name="str_ok">OK</string>
    <string name="str_launching_product">Peluncuran Produk</string>
    <string name="str_harga_pasar">Harga Pasar</string>
    <string name="str_audit_visit">Salesman Visit</string>
    <string name="str_product_detail">Detail Produk</string>
    <string name="str_finish">Selesai</string>
    <string name="str_admin">Admin</string>
    <string name="str_user_name">User Id</string>
    <string name="str_password">Password</string>
    <string name="str_login">Login</string>
    <string name="title_activity_login">Login</string>
    <string name="str_planning_list">Daftar Rencana</string>
    <string name="str_supervisory">Salesman</string>
    <string name="str_informasi">Informasi</string>
    <string name="str_synchronization">Sinkronisasi</string>
    <string name="str_name">Nama</string>
    <string name="str_username">Username</string>
    <string name="str_salessmen_assesment">Penilaian Salesman</string>
    <string name="str_revert">Kembali</string>
    <string name="str_save_change_question">Simpan Perubahan ?</string>
    <string name="str_regular_visit">Kunjungan Rutin</string>
    <string name="str_posm_status">POSM status</string>
    <string name="str_company">Perusahaan</string>
    <string name="str_materi_promosi">Materi Promosi</string>
    <string name="str_program_trade">Program Trade</string>
    <string name="str_fee_uang">Fee Uang</string>
    <string name="str_fee_produk">Fee Produk</string>
    <string name="str_durasi_mulai">Durasi Mulai</string>
    <string name="str_durasi_akhir">Durasi Akhir</string>
    <string name="str_harga_beli_per_bal">Harga Beli / Bal</string>
    <string name="str_harga_jual_per_bal">Harga Jual / Bal</string>
    <string name="str_harga_beli_per_slof">Harga Beli / Slof</string>
    <string name="str_harg_jual_per_slof">Harga Jual / Slof</string>
    <string name="str_harga_beli_per_bungkus">Harga Beli / Bungkus</string>
    <string name="str_harga_jual_per_bungkus">Harga Jual / Bungkus</string>
    <string name="str_kategori">Kategori</string>
    <string name="str_execution_remark">Catatan Pelaksanaan</string>
    <string name="str_execution_list">Daftar Pelaksanaan</string>
    <string name="str_purpose_of_visit">Maksud Kunjungan</string>
    <string name="str_add_execution">Pelaksanaan Baru</string>
    <string name="str_master_data">Data Master</string>
    <string name="str_master_data_planning">Data Master Planning</string>
    <string name="str_actual_data">Data Aktual</string>
    <string name="str_pengguna_terdaftar">Pengguna Terdaftar</string>
    <string name="str_register">Daftar</string>
    <string name="str_register_user">Pendaftaran Pengguna</string>
    <string name="str_merchandise">Merchandise</string>
    <string name="str_login_note">CATATAN:\nHarap diperhatikan, jika salah melakukan authentikasi sebanyak 3 (tiga) kali, maka aplikasi secara otomatis akan menghapus seluruh data Survey Outlet pada handheld ini.</string>
    <string name="str_list_of_value">Rute</string>
    <string name="str_competitor_company">Perusahaan Saingan</string>
    <string name="str_internal_product">Produk Internal</string>
    <string name="str_competitor_product">Produk Kompetitor</string>
    <string name="str_district_data">Data Distrik</string>
    <string name="str_general_planning">Perencanaan Umum</string>
    <string name="str_trade_planning">Perencanaan Dagang</string>
    <string name="str_sync_time">Waktu Sinkronisasi</string>
    <string name="str_please_select">Silakan Pilih</string>
    <string name="str_please_enter_program">Masukan Program</string>
    <string name="str_please_enter_cash_fee">Masukan Fee Uang</string>
    <string name="str_please_enter_product_fee">Masukan Fee Produk</string>
    <string name="str_please_enter_merhandise">Masukan Merchandise</string>
    <string name="str_please_enter_start_duration">Masukan Durasi Mulai</string>
    <string name="str_please_enter_end_duration">Masukan Durasi Akhir</string>
    <string name="str_please_enter_description">Masukan Deskripsi</string>
    <string name="str_please_enter_execution_remark">Masukan Catatan Pelaksanaan</string>
    <string name="str_please_enter_outlet_name"></string>
    <string name="str_attention">Perhatian</string>
    <string name="str_uncomplete_entry_message">Data yang diisi belum lengkap. Harap dilengkapi sebelum melanjutkan</string>
    <string name="str_supervisor">Supervisor</string>
    <string name="str_planning">Planning</string>
    <string name="str_outlet_sum">Jml. Outlet</string>
    <string name="str_actual">Aktual</string>
    <string name="str_status">Status</string>
    <string name="str_reason">Alasan</string>
    <string name="str_rekap">Rekap</string>
    <string name="str_rekap_data">Rekap Data</string>
    <string name="str_detail_rekap_data">"Detail Rekap Data "</string>
    <string name="str_confirmation">Konfirmasi</string>
    <string name="str_camera">Kamera</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_jv_outlet_competitor_program_view">Jv_outlet_competitor_program_view</string>
    <string name="title_activity_jv_outlet_competitor_program__entry">Jv_outlet_competitor_program_Entry</string>
    <string name="str_Kategory">Jenis Produk</string>
    <string name="str_Enter_MP">Masukkan Materi promosi</string>
    <string name="Mp_poster">Poster</string>
    <string name="Mp_PosterS">Poster Stiker</string>
    <string name="Mp_Sunblind">Sunblind</string>
    <string name="Mp_Pack">Pack Display</string>
    <string name="Mp_Multi">Multi Stiker</string>
    <string name="Mp_Hanging">Hanging Mobile</string>
    <string name="Mp_Wobler">Wobler</string>
    <string name="Mp_Price">Price Stiker</string>
    <string name="form_prospek_nama">Nama Usaha</string>
    <string name="form_prospek_jenisusaha">Jenis Usaha</string>
    <string name="form_prospek_pembiayaan">Pembiayaan</string>
    <string name="form_prospek_namadebitur">Nama Debitur</string>
    <string name="form_action_delete">Hapus</string>
    <string name="form_action_agree">Cocok</string>
    <string name="form_action_disagree">Tidak Cocok</string>
    <string name="title_activity_tabungan_title_content">Setoran Tabungan</string>
    <string name="title_activity_tagihan_title_content">List Result Entry</string>
    <string name="cashcheckup_total_tabungan">Total Tabungan</string>
    <string name="cashcheckup_total_tagihan">Total Tagihan</string>
    <string name="cashcheckup_total_cashpickup">Total Cash Pickup</string>
</resources>