<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:background="@color/color_white">

    <ScrollView
        android:id="@+id/cashcheckup_content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset"
        android:scrollbarFadeDuration="0"
        android:scrollbarSize="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/cashcheckup_content_linier_tabungan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cashcheckup_lbl_title_tabungan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_tabungan_title_content"
                    style="@style/label_1" />

                <TableLayout
                    android:id="@+id/cashcheckup_tableLayout_tabungan"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cashcheckup_lbl_totaltabungan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cashcheckup_total_tabungan"
                        style="@style/label_1" />

                    <TextView
                        android:id="@+id/cashcheckup_lbl_totaltabungan_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="150dp"
                        android:text="@string/str_dash"
                        style="@style/label_1" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cashcheckup_content_linier_tagihan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cashcheckup_lbl_title_tagihan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_activity_tagihan_title_content"
                    style="@style/label_1" />

                <TableLayout
                    android:id="@+id/cashcheckup_tableLayout_tagihan"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cashcheckup_lbl_totaltagihan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cashcheckup_total_tagihan"
                        style="@style/label_1" />

                    <TextView
                        android:id="@+id/cashcheckup_lbl_totaltagihan_value"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="150dp"
                        android:text="@string/str_dash"
                        style="@style/label_1" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/cashcheckup_content_linier_cashpickup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/cashcheckup_lbl_totalcashpickup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cashcheckup_total_cashpickup"
                    style="@style/label_1" />

                <TextView
                    android:id="@+id/cashcheckup_lbl_totalcashpickup_value"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="150dp"
                    android:text="@string/str_dash"
                    style="@style/label_1" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/cashcheckup_content_linier_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/cashcheckup_content_container"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/cashcheckup_view_btn_agree"
            android:layout_marginTop="2dp"
            android:text="@string/form_action_agree"
            style="@style/button_text"
            android:background="@color/color_black"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true" />

        <Button
            android:id="@+id/cashcheckup_view_btn_disagree"
            android:layout_marginTop="2dp"
            android:text="@string/form_action_disagree"
            style="@style/button_text"
            android:background="@color/color_black"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true" />


    </LinearLayout>

</RelativeLayout>