<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			    android:layout_width="match_parent"
			     android:id="@+id/rl"
			    android:layout_height="match_parent">
		<ScrollView 
					android:layout_width="fill_parent"
					android:layout_height="fill_parent"
					android:scrollbarStyle="insideInset"
					android:fadeScrollbars="true"
					android:scrollbarSize="10dip"
					android:fitsSystemWindows="true" >
							<LinearLayout
								android:orientation="vertical"
								android:layout_width="fill_parent"
								android:layout_height="fill_parent">
								<HorizontalScrollView
								android:layout_width="fill_parent"
								android:layout_height="fill_parent"
								android:scrollbarStyle="insideInset"
								android:fadeScrollbars="true"
								android:scrollbarSize="10dip"
								android:fitsSystemWindows="true"   >
									<LinearLayout
									android:layout_width="fill_parent"
									android:layout_height="fill_parent"
									android:orientation="vertical" >
									
			
			
			    <LinearLayout
			        android:id="@+id/app_image_dlg_footer_container"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:layout_centerHorizontal="true"
			        android:layout_alignParentBottom="true"
			        android:layout_marginBottom="5dp">
			
			        <Button
			            android:id="@+id/app_img_delete"
			            style="@style/positive_button"
			            android:layout_weight="1"
			            android:text="@string/form_action_delete"
			            android:layout_marginRight="5dp" />
			
			        <Button
			            android:id="@+id/app_img_back"
			            android:layout_weight="1"
			            android:text="@string/str_back"
			            style="@style/negative_button"
			            android:layout_marginRight="5dp" />
			    </LinearLayout>
			
			    <LinearLayout
			        android:layout_width="match_parent"
			        android:layout_height="match_parent"
			        android:orientation="vertical">
			
			        <ImageView
			            android:id="@+id/app_img_content"
			            android:layout_width="wrap_content"
			            android:layout_height="400dp"
			            android:contentDescription="@string/str_dash" />
			    </LinearLayout>
			
			

	</LinearLayout>
	</HorizontalScrollView>
	</LinearLayout>
	</ScrollView>
</RelativeLayout>			