<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:background="@color/color_search">

    <ScrollView
        android:id="@+id/search_dlg_content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset"
        android:scrollbarFadeDuration="0"
        android:scrollbarSize="20dp">


        <LinearLayout
            android:id="@+id/contentlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/search_view_lbl_namausaha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/label_1"
                    android:text="@string/form_prospek_nama" />

                <TextView
                    android:id="@+id/search_view_lbl_namadebitur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/label_1"
                    android:text="@string/form_prospek_namadebitur"
                    android:layout_marginTop="20dp" />

                <TextView
                    android:id="@+id/search_view_lbl_jenisusaha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/label_1"
                    android:layout_marginTop="20dp"
                    android:text="@string/form_prospek_jenisusaha" />

                <TextView
                    android:id="@+id/search_view_lbl_tipepembiayaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/label_1"
                    android:layout_marginTop="20dp"
                    android:text="@string/form_prospek_pembiayaan" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/search_view_txt_namausaha"
                    style="@style/edittext_2"
                    android:layout_width="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:enabled="true" />

                <EditText
                    android:id="@+id/search_view_txt_namadebitur"
                    style="@style/edittext_2"
                    android:layout_width="match_parent"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:enabled="true" />


                <com.mobile.framework.widget.ExSpinner
                    android:id="@+id/search_view_spn_jenisusaha"
                    style="@style/spinner_2"
                    android:layout_marginTop="10dp"
                    android:prompt="@string/form_prospek_jenisusaha" />

                <com.mobile.framework.widget.ExSpinner
                    android:id="@+id/search_view_spn_jenispembiayaan"
                    style="@style/spinner_2"
                    android:prompt="@string/form_prospek_pembiayaan" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/master_footer_layout1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/search_view_btn_cancel"
            android:layout_marginTop="2dp"
            style="@style/button_text_navigatorS"
            android:layout_gravity="center"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:enabled="true"
            android:text="@string/str_cancel"
            android:visibility="visible" />

        <Button
            android:id="@+id/search_view_btn_search"
            android:layout_marginTop="2dp"
            android:text="@string/str_search"
            style="@style/button_text_navigatorS"
            android:layout_gravity="center"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:enabled="true"
            android:visibility="visible" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/master_footer_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="180dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/home_koki"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginLeft="19dp"
            android:src="@drawable/people_search" />
    </LinearLayout>
</RelativeLayout>