<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/closing_body_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_bacground1">

    <RelativeLayout
        android:id="@+id/statistik_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/color_header"
        android:layout_above="@+id/statistik_header_layout">

        <TextView
            android:id="@+id/statistik_lbl_user_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:text="@string/str_user_information"
            style="@style/label_1"
            android:layout_alignParentLeft="true"
            android:gravity="left" />

        <TextView
            android:id="@+id/statistik_lbl_currentdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:layout_toRightOf="@id/statistik_lbl_user_information"
            android:text="@string/str_date"
            style="@style/label_1"
            android:gravity="right"
            android:layout_alignParentRight="true" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/statistik_header_layout"></RelativeLayout>


    <RelativeLayout
        android:id="@+id/statistik_footer_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:gravity="right">


        <ImageView
            android:id="@+id/statistik_btn_back"
            android:layout_height="38dp"
            android:layout_width="80dp"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="7dp"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/str_back"
            android:src="@drawable/back" />

    </RelativeLayout>
</RelativeLayout>